css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  height: 100%;

  box-sizing: border-box;

  font: normal 100%/1.5 Gill Sans,sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

*, *:after, *:before {
  box-sizing: border-box;
}

body {
	margin: 0;
	padding: 0;
  height:100%;
}

.clear {
  clear: both;
}

/** SKIP LINKS **/

.skip-links {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.skip-links a {
  padding: 0.5em 0.75em;
  position: absolute;
  top: -3em;
  background-color: #000;
  color: #fff;
  font-weight: bold;
}

.skip-links: a:focus {
  top: 0;
}

/** TOP NAVIGATION **/
.logo-top {
  width: 100%;
}

.logo-top a {
  margin: auto;
}

.logo-top img{
  width: 50px;
}

.main-head a {
  text-decoration: none;
}

.main-head a,
.main-head a:link,
.main-head a:visited{
  color: white;
}

.nav-top {
  width: 100%;
  text-align: center;
}

.nav-list ul { 
  width: 100%;
  list-style-type: none;
  padding: 0;
  text-align: center;
}

.nav-list a,
.nav-list a:link,
.nav-list a:visited {
  overflow: hidden;
	font-weight: 400;
	color: white;
	text-decoration: none;
}

.nav-list a:hover {
	color: #fbc912;
	overflow: hidden;
}

/** HEADER **/
.masthead {
  background-color: #86BFAB;
  overflow: hidden;
  text-align: center;
}


/** BILLBOARD **/
.billboard {
  position: relative;

  text-align: center;
  width: 100%;
  height: 75%;
  color: #fbc912;

  background-image: url(../imgs/billboard-image-02.jpg);
  background-size: cover;
  background-position: top;
}

.billboard-thanks {
  position: relative;
  overflow: hidden;

  text-align: center;
  width: 100%;
  height: 25rem;
  color: #fbc912;

  background-image: url(../imgs/billboard-image-02.jpg);
  background-size: cover;
  background-position: top;  
}

.thanks {
  margin-top: 25%;
  margin-bottom: 50%;
}

.val-prop {
  padding-top: 5rem;
  color: white;
}

.start-button {
  text-align: center;
}

.start-button a {
  margin: .75em;
  color: white;
  text-decoration: none;
  text-transform: uppercase;
  border: .25em solid #F6891F;
}

.start-button a:hover {
  color: #fbc912;
}

/** MAIN **/
.main {
  margin: 0;
}

.headline {
  width: 100%;
	text-align: center;
	overflow: hidden;
}

.feature {
  width: 20%;
}

.img-flex {
  width: 100%;
  display: block;
}

.pricing {
    width: 100%;
    overflow: hidden;
}

.pricing ul { 
  padding: .5rem; 
}

.pricing li { 
  list-style: none; 
}

.pricing li:before {
    content: '•';
    color: red;
    float: left;
    width: 1em;
    margin: .25rem -1rem;
    font-size: 75%;
}

.pricing-package {
  display: inline-block;
}

.end-note {
  width: 100%;
}


/** FORM **/
label {
  display: block;
}

input,
select,
textarea {
  width: 100%;
}

input,
textarea {
  height: 2rem;
}

button {
  padding: .5rem 1rem .5rem 1rem;

  color: white;
  background-color: #fbc912;
  text-decoration: none;
  text-transform: uppercase;
  border: .25em solid #F6891F;
}

button:hover {
  color: #fbc912;
  background-color: white;
}

/** FOOTER **/
.footer {
	background-color: #86BFAB;
	overflow: hidden;
}

.footer ul {
  margin: 0;
  padding: 0;
}

.nav-bottom {
	float: left;
}

.nav-bottom ul {
	list-style-type: none;
}

.nav-bottom a {
	text-decoration: none;
	color: white;
}

.top-button {
  clear: both;
  text-transform: none;
}

.logo-bottom {
  float: right;
}

.logo-bottom img {
	width: 50px;
}

.copyright {
  text-align: right;
  clear: both;
}

/** MEDIA QUERIES **/
@media only screen and (min-width: 25em) /** small starting @400px **/ {

}

@media only screen and (min-width: 38em) /** medium starting @ 608px **/{
  .masthead {
    text-align: left;
  }

  .logo-top {
    float: left;
    display: inline;
  }

  .logo-top img {
    float: left;
  }

  .main-head {
    padding-top: .5rem;
    float: left;
  }

  .nav-list {
    display: inline-block;
    text-align: right;
    float: right;
    padding-top: .75rem;
  }

  .nav-list li {
    display: inline;
  }

  .billboard {
    height: 50%;
  }

  .billboard-thanks {
    height: 40rem;
  }

  .headline {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
  }

  label {
    display: inline-block;
  }

  input,
  textarea {
    height: 1.5rem;
  }

  .nav-bottom {
		display: block;
	}

	.nav-bottom li {
		display: inline-block;
	}

  .nav-bottom li:nth-child(even) {
    margin-left: .75rem;
    margin-right: .75rem;    
  }

@media only screen and (min-width: 60em) /** large starting @960px **/{
	html {
 		font-size: 110%;
  }

  .nav-top {
    text-align: right;
    float: right;
  }

	.nav-bottom li {
		display: inline-block;
  }

@media only screen and (min-width: 90em) {
	html {
		font-size: 120%;
  	}
}

@media only screen and (min-width: 120em) {
  	html {
  		font-size: 130%;
  	}
}

